fix: Moved away from gap and used margins as diff gaps from button to item, item to title, item to item.

--- a/src/components/FAQ/FAQ.module.scss
+++ b/src/components/FAQ/FAQ.module.scss
@@ -8,10 +8,9 @@
   font-family: var(--default-secondary-font-family);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
-  padding: var(--space-xl);
-  gap: var(--space-sm);
+  padding: var(--space-2lg);
 }
 
 .title {
@@ -19,4 +18,8 @@
 
   font-family: var(--secondary-font-family);
   font-weight: var(--bold);
+}
+
+.seeMoreButton {
+  margin-top: var(--space-sm);
 }
