--- a/src/components/FAQ/components/FAQItem/index.module.scss
+++ b/src/components/FAQ/components/FAQItem/index.module.scss
@@ -3,12 +3,11 @@
 @import '../../../../styles/designSystem/spacing';
 
 .item {
-  margin-top: var(--space-md);
+  margin-top: var(--space-2lg);
   text-align: left;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0;
 }
 
 .questionContainer {
@@ -38,5 +37,6 @@
 }
 
 .toggleIcon {
+  display: flex;
   color: var(--color-slate-400);
 }
